fixed 'about' section of about page, made flex model for 4 boxes in main content so they wrap properly

--- a/css/index.css
+++ b/css/index.css
@@ -288,3 +288,21 @@ nav a {
 .middle-content .boxes .box10 {
   background-color: dodgerblue;
 }
+
+.about-page .middle-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: cnter;
+}
+
+.about-page .middle-content .categories {
+  width: 45%;
+  margin: 15px;
+}
+
+.about-page .about-info {
+  border-bottom: 1px dashed black;
+  padding: 0px 30px 30px;
+  margin: 0;
+}
